WIP fix overflow final upload message

--- a/frontend/src/css/Forms.css
+++ b/frontend/src/css/Forms.css
@@ -1,6 +1,6 @@
 .stepContainer {
   margin-bottom: 2em;
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
 }
 .stepContainer .card img {
   max-height: 250px;
